吹き出し調整

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <img
           src="images/fv-text1.svg"
           alt="ちょっと待って！"
-          class="w-[50%] lg:w-[40%] mt-6 lg:mt-12 mx-auto"
+          class="w-[50%] lg:w-[40%] mt-6 lg:mt-8 mx-auto"
         />
         <h2
           class="text-center py-6 px-4 font-mincho text-basecolor font-semibold"
@@ -141,32 +141,42 @@
     </section>
     <!-- チェックシートセクション -->
     <section>
-      <div class="bg-background relative">
-        <div class="w-[80%] lg:w-[50%] mx-auto pb-10 lg:pb-20">
-          <img
-            src="images/kakunin.webp"
-            alt="確認必須！"
-            class="w-[95px] lg:w-[180px] ml-5 lg:ml-[120px]"
-          />
-          <h2 class="text-[1.1rem] lg:text-[3rem] font-bold pt-1 text-center">
+      <div class="bg-background">
+        <div
+          class="w-[80%] lg:w-[50%] mx-auto pb-10 lg:pb-20 lg:pt-15 flex justify-center"
+        >
+          <h2
+            class="text-[1.1rem] lg:text-[3.5rem] font-bold pt-1 text-center relative inline-block"
+          >
+            <img
+              src="images/kakunin.webp"
+              alt="確認必須！"
+              class="w-[95px] lg:w-[180px] absolute left-0 -top-5 lg:-top-10 z-10"
+            />
             施工業者選びで失敗しないための<br /><span
               class="text-[#d7444a] text-3xl lg:text-[5rem] font-extrabold tracking-wider"
               >簡単15秒</span
             >チェックシート
           </h2>
         </div>
+      </div>
+      <div class="bg-background relative">
         <div class="absolute bottom-0 left-0 right-0 translate-y-1/2">
           <img
             src="images/tri.svg"
             alt=""
-            class="w-[80%] lg:w-[30%] h-auto mx-auto"
+            class="w-[80%] lg:w-[40%] h-auto mx-auto"
           />
         </div>
       </div>
-      <p class="w-[80%] mx-auto text-center py-9 mt-6">
-        太陽光発電や蓄電池を導入する際、<br />「安さ」だけで選んでいませんか？<br />実は、その判断が後悔やトラブルの原因になることも・・・
+      <p
+        class="w-[80%] lg:w-[50%] mx-auto text-center py-9 mt-6 lg:mt-18 lg:pb-12 lg:text-[1.4rem]"
+      >
+        太陽光発電や蓄電池を導入する際、<br
+          class="lg:hidden"
+        />「安さ」だけで選んでいませんか？<br />実は、その判断が後悔やトラブルの原因になることも・・・
       </p>
-      <div class="bg-background w-[90%] mx-auto py-6">
+      <div class="bg-background w-[90%] lg:w-[50%] mx-auto py-6">
         <div class="max-w-md mx-auto px-3 font-mincho">
           <h2 class="text-center text-2xl font-semibold mb-8 text-gray-800">
             これらに当てはまる業者は
