--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         alt="太陽光パネル・蓄電池のイメージ写真"
       />
 
-      <div class="w-[90%] lg:w-[50%] text-center mx-auto">
+      <div class="w-[90%] lg:w-[50%] lg:max-w-[960px] text-center mx-auto">
         <p class="py-5 lg:text-3xl lg:my-9 lg:leading-relaxed">
           <span class="text-[#d7444a] font-bold">豊富な施工実績</span>と<span
             class="text-[#d7444a] font-bold"
@@ -165,7 +165,7 @@
           <img
             src="images/tri.svg"
             alt=""
-            class="w-[80%] lg:w-[40%] h-auto mx-auto"
+            class="w-[80%] lg:w-[40%] lg:max-w-[600px] h-auto mx-auto"
           />
         </div>
       </div>
@@ -177,24 +177,26 @@
         />「安さ」だけで選んでいませんか？<br />実は、その判断が後悔やトラブルの原因になることも・・・
       </p>
       <div class="bg-background w-[90%] lg:w-[50%] mx-auto py-6">
-        <div class="max-w-md mx-auto px-3 font-mincho">
-          <h2 class="text-center text-2xl font-semibold mb-8 text-gray-800">
+        <div class="max-w-md lg:max-w-[90%] mx-auto px-3 font-mincho">
+          <h2
+            class="text-center text-2xl lg:text-4xl font-semibold mb-8 text-basecolor lg:flex lg:items-center lg:justify-center lg:gap-2 lg:py-6"
+          >
             これらに当てはまる業者は
-            <span class="inline-flex items-center gap-1 mt-2">
+            <span class="inline-flex items-center gap-1 lg:mt-0 mt-2">
               <span
-                class="bg-gray-700 text-white text-[1.9rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] leading-none"
+                class="bg-basecolor text-white text-[1.9rem] lg:text-[4rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] lg:w-22 lg:h-22 leading-none"
                 >要</span
               >
               <span
-                class="bg-gray-700 text-white text-[1.9rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] leading-none"
+                class="bg-basecolor text-white text-[1.9rem] lg:text-[4rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] lg:w-22 lg:h-22 leading-none"
                 >注</span
               >
               <span
-                class="bg-gray-700 text-white text-[1.9rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] leading-none"
+                class="bg-basecolor text-white text-[1.9rem] lg:text-[4rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] lg:w-22 lg:h-22 leading-none"
                 >意</span
               >
               <span
-                class="bg-gray-700 text-white text-[1.9rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] leading-none"
+                class="bg-basecolor text-white text-[1.9rem] lg:text-[4rem] font-normal inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] lg:w-22 lg:h-22 leading-none"
               >
                 <span style="display: inline-block; transform: rotate(30deg)"
                   >!</span
@@ -206,7 +208,7 @@
           <!-- チェックリスト -->
           <ul class="space-y-3 font-semibold list-none tracking-[0.03rem]">
             <!-- チェック項目1 -->
-            <li class="bg-white shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -224,13 +226,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">
+              <p class="text-gray-700 text-sm lg:text-xl">
                 電力の使用状況やライフスタイルに合わせた提案がない
               </p>
             </li>
 
             <!-- チェック項目2 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -248,13 +250,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">
+              <p class="text-gray-700 text-sm lg:text-xl">
                 工事に関して詳しい説明が少ない
               </p>
             </li>
 
             <!-- チェック項目3 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -272,11 +274,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">これまでの施工件数が少ない</p>
+              <p class="text-gray-700 text-sm lg:text-xl">
+                これまでの施工件数が少ない
+              </p>
             </li>
 
             <!-- チェック項目4 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -294,11 +298,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">設置後の話が全くない</p>
+              <p class="text-gray-700 text-sm lg:text-xl">
+                設置後の話が全くない
+              </p>
             </li>
 
             <!-- チェック項目5 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -316,13 +322,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">
+              <p class="text-gray-700 text-sm lg:text-xl">
                 補助金の申請代行やサポートがない
               </p>
             </li>
 
             <!-- チェック項目6 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -340,13 +346,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">
+              <p class="text-gray-700 text-sm lg:text-xl">
                 設置メーカーやプランを選べない
               </p>
             </li>
 
             <!-- チェック項目7 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -364,13 +370,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">
+              <p class="text-gray-700 text-sm lg:text-xl">
                 保証・制度についての説明が全くない
               </p>
             </li>
 
             <!-- チェック項目8 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -388,13 +394,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">
+              <p class="text-gray-700 text-sm lg:text-xl">
                 建物の構造や建築に関してのノウハウを保有していない
               </p>
             </li>
 
             <!-- チェック項目9 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -412,10 +418,12 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">相見積もりを取らせてくれない</p>
+              <p class="text-gray-700 text-sm lg:text-xl">
+                相見積もりを取らせてくれない
+              </p>
             </li>
             <!-- チェック項目10 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
@@ -433,54 +441,58 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">安さのみを売りにしている</p>
+              <p class="text-gray-700 text-sm lg:text-xl">
+                安さのみを売りにしている
+              </p>
             </li>
           </ul>
         </div>
       </div>
     </section>
     <!-- 6つのポイントセクション -->
-    <section class="w-[90%] mx-auto">
+    <section class="w-[90%] lg:w-[50%] lg:max-w-[960px] mx-auto">
       <img
         src="images/check.webp"
         alt="じゃあどんな業者を選べばいいの？"
-        class="w-[70%] mx-auto my-7"
+        class="w-[70%] lg:w-[50%] lg:max-w-[960px] mx-auto my-7 lg:my-14"
       />
       <div class="py-6 green-gradient">
-        <div class="max-w-md mx-auto px-3">
+        <div class="max-w-md lg:max-w-full lg:w-[90%] mx-auto px-3">
           <h2
-            class="text-center text-[1.2rem] mb-8 text-white font-mincho font-semibold"
+            class="text-center text-[1.2rem] lg:text-[2.2rem] mb-8 text-white font-mincho font-semibold"
           >
-            施工評者選びで損しないために<br />押さえておきたい<br />
+            施工評者選びで損しないために<br
+              class="lg:hidden"
+            />押さえておきたい<br />
             <span
-              class="inline-flex items-center gap-0.5 sm:gap-1 mt-2 font-semibold text-[1.6rem] sm:text-[1.4rem] text-[#4fac00]"
+              class="inline-flex items-center gap-0.5 sm:gap-1 mt-2 font-semibold text-[1.6rem] sm:text-[1.4rem] lg:text-[4rem] lg:gap-3 text-[#4fac00]"
             >
               <span
-                class="bg-white py-2 font-serif inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
+                class="bg-white py-2 font-serif inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem] lg:w-20 lg:h-20"
                 >6</span
               >
               <span
-                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem] lg:w-20 lg:h-20"
                 >つ</span
               >
               <span
-                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem] lg:w-20 lg:h-20"
                 >の</span
               >
               <span
-                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem] lg:w-20 lg:h-20"
                 >ポ</span
               >
               <span
-                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem] lg:w-20 lg:h-20"
                 >イ</span
               >
               <span
-                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem] lg:w-20 lg:h-20"
                 >ン</span
               >
               <span
-                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem]"
+                class="bg-white py-2 inline-flex items-center justify-center w-[2.6rem] h-[2.6rem] sm:w-[2.6rem] sm:h-[2.6rem] lg:w-20 lg:h-20"
                 >ト</span
               >
             </span>
@@ -491,7 +503,7 @@
             class="space-y-3 font-mincho font-semibold list-none tracking-[0.03rem]"
           >
             <!-- チェック項目1 -->
-            <li class="bg-white shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -509,11 +521,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">施工・販売実績が豊富</p>
+              <p class="text-gray-700 text-sm lg:text-xl">
+                施工・販売実績が豊富
+              </p>
             </li>
 
             <!-- チェック項目2 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -531,13 +545,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">
+              <p class="text-gray-700 text-sm lg:text-xl">
                 最新技術や色んなメーカーを取扱っている
               </p>
             </li>
 
             <!-- チェック項目3 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -555,13 +569,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">
+              <p class="text-gray-700 text-sm lg:text-xl">
                 自社施工しており下請け業者に任せていない
               </p>
             </li>
 
             <!-- チェック項目4 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -579,13 +593,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">
+              <p class="text-gray-700 text-sm lg:text-xl">
                 ライフスタイルに合わせた提案をしてくれる
               </p>
             </li>
 
             <!-- チェック項目5 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -603,13 +617,13 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">
+              <p class="text-gray-700 text-sm lg:text-xl">
                 安いだけでなく、補償内容も充実している
               </p>
             </li>
 
             <!-- チェック項目6 -->
-            <li class="bg-white rounded shadow-sm p-4 flex items-center gap-6">
+            <li class="bg-white shadow-sm p-4 lg:p-8 flex items-center gap-6">
               <div
                 class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
@@ -627,18 +641,22 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm">補助金などの制度に詳しい</p>
+              <p class="text-gray-700 text-sm lg:text-xl">
+                補助金などの制度に詳しい
+              </p>
             </li>
           </ul>
         </div>
       </div>
-      <p class="text-center py-6">
-        省エネ設備は長期使用が前提。<br />補助金や安さだけでなく、施工技術と保証が充実した<br />【安心できる業者】を選びましょう!!
+      <p class="text-center py-6 lg:text-[1.4rem] lg:py-12">
+        省エネ設備は長期使用が前提。<br />補助金や安さだけでなく、施工技術と保証が充実した<br
+          class="lg:hidden"
+        />【安心できる業者】を選びましょう!!
       </p>
       <a href="#form"
         ><img
           src="images/conv-btn.webp"
-          class="w-[90%] mx-auto pb-9"
+          class="w-[90%] lg:w-[70%] mx-auto pb-9"
           alt="経験豊富なプロに無料相談・見積もりを依頼する"
       /></a>
     </section>
@@ -659,27 +677,36 @@
             aria-hidden="true"
           />
           <h2
-            class="relative z-10 text-center text-[1.6rem] font-bold pb-8 font-mincho leading-loose tracking-wider"
+            class="relative z-10 text-center text-[1.6rem] lg:text-5xl lg:mt-10 font-bold pb-8 font-mincho leading-loose tracking-wider"
           >
-            株式会社<br />Y2ENERGYGROUPが<br />選ばれている理由
+            株式会社<br
+              class="lg:hidden"
+            />Y2ENERGYGROUPが<br />選ばれている理由
           </h2>
         </div>
         <h3>
           <img
             src="images/reason-text1.svg"
             alt="4つの安心独自保証をプラス"
-            class="py-3"
+            class="py-3 lg:w-[65%] mx-auto"
           />
         </h3>
         <img
           src="images/reason-sm-point1.webp"
           alt="POINT 15年施工保証 POINT メーカー保証"
+          class="block lg:hidden"
         />
         <img
           src="images/reason-sm-point2.webp"
           alt="POINT 安心サポート POINT 工事保証"
-          class="-mt-4 pb-9"
+          class="-mt-4 pb-9 block lg:hidden"
         />
+        <div class="hidden lg:block text-right">
+          <img src="images/point1-pc.webp" alt="" class="w-1/2" />
+        </div>
+        <img src="images/point2-pc.webp" alt="" class="hidden lg:block" />
+        <img src="images/point3-pc.webp" alt="" class="hidden lg:block" />
+        <img src="images/point4-pc.webp" alt="" class="hidden lg:block" />
         <h3 class="font-mincho font-semibold text-[1.1rem]">
           お見積もりから設置まで<br />全て自社施工だから<br /><span
             class="text-gradient text-[2rem] font-bold"
@@ -1168,7 +1195,7 @@
         <a href="#form"
           ><img
             src="images/conv-btn.webp"
-            class="w-[90%] mx-auto py-9"
+            class="w-[90%] lg:w-[70%] mx-auto py-9"
             alt="経験豊富なプロに無料相談・見積もりを依頼する"
         /></a>
       </div>
@@ -1327,7 +1354,7 @@
         <a href="#form"
           ><img
             src="images/conv-btn.webp"
-            class="w-[90%] mx-auto my-6"
+            class="w-[90%] lg:w-[70%] mx-auto my-6"
             alt="経験豊富なプロに無料相談・見積もりを依頼する"
         /></a>
       </div>
@@ -1843,7 +1870,7 @@
       <a href="#form"
         ><img
           src="images/conv-btn.webp"
-          class="w-[90%] mx-auto py-9"
+          class="w-[90%] lg:w-[70%] mx-auto py-9"
           alt="経験豊富なプロに無料相談・見積もりを依頼する"
       /></a>
     </section>
