--- a/index.html
+++ b/index.html
@@ -701,36 +701,54 @@
           alt="POINT 安心サポート POINT 工事保証"
           class="-mt-4 pb-9 block lg:hidden"
         />
-        <div class="hidden lg:block text-right">
-          <img src="images/point1-pc.webp" alt="" class="w-1/2" />
+        <div class="hidden lg:flex lg:justify-end">
+          <img src="images/point1-pc.webp" alt="" class="w-[70%] mt-10" />
         </div>
-        <img src="images/point2-pc.webp" alt="" class="hidden lg:block" />
-        <img src="images/point3-pc.webp" alt="" class="hidden lg:block" />
-        <img src="images/point4-pc.webp" alt="" class="hidden lg:block" />
-        <h3 class="font-mincho font-semibold text-[1.1rem]">
-          お見積もりから設置まで<br />全て自社施工だから<br /><span
-            class="text-gradient text-[2rem] font-bold"
+        <div class="hidden lg:flex lg:justify-start">
+          <img src="images/point2-pc.webp" alt="" class="w-[70%] mt-5" />
+        </div>
+        <div class="hidden lg:flex lg:justify-end">
+          <img src="images/point3-pc.webp" alt="" class="w-[70%] mt-5" />
+        </div>
+        <div class="hidden lg:flex lg:justify-start">
+          <img src="images/point4-pc.webp" alt="" class="w-[70%] mt-5" />
+        </div>
+        <h3
+          class="font-mincho font-semibold text-[1.1rem] lg:text-3xl lg:mt-20"
+        >
+          お見積もりから設置まで<br
+            class="lg:hidden"
+          />全て自社施工だから<br /><span
+            class="text-gradient text-[2rem] lg:text-[4rem] font-bold lg:pt-2 lg:inline-block"
             >高品質</span
           ><span class="font-bold px-1">で</span
-          ><span class="text-gradient text-[2rem] font-bold">低価格</span>
+          ><span class="text-gradient text-[2rem] lg:text-[4rem] font-bold"
+            >低価格</span
+          >
         </h3>
-        <img src="images/green-border.svg" alt="下線" class="py-2" />
+        <img
+          src="images/green-border.svg"
+          alt="下線"
+          class="py-2 lg:py-5 lg:w-[80%] lg:mx-auto"
+        />
         <div class="flex pt-6 pb-3 text-center justify-center items-end">
           <div class="w-[33%] mx-auto flex flex-col">
             <img
               src="images/graph1.svg"
               alt="大手企業に依頼した場合のグラフ"
-              class="w-[80%] mx-auto"
+              class="w-[80%] mx-auto lg:w-[60%]"
             />
-            <p class="flex-none text-[0.65rem]">大手企業に<br />依頼した場合</p>
+            <p class="flex-none text-[0.65rem] lg:text-lg lg:pt-2">
+              大手企業に<br />依頼した場合
+            </p>
           </div>
           <div class="w-[33%] mx-auto flex flex-col">
             <img
               src="images/graph2.svg"
               alt="外注を使う企業に依頼した場合のグラフ"
-              class="w-[80%] mx-auto"
+              class="w-[80%] mx-auto lg:w-[60%]"
             />
-            <p class="flex-none text-[0.65rem]">
+            <p class="flex-none text-[0.65rem] lg:text-lg lg:pt-2">
               外注を使う企業に<br />依頼した場合
             </p>
           </div>
@@ -738,9 +756,9 @@
             <img
               src="images/graph3.svg"
               alt="Y2ENERGYGROUPに依頼した場合のグラフ"
-              class="w-[80%] mx-auto"
+              class="w-[80%] mx-auto lg:w-[60%]"
             />
-            <p class="flex-none text-[0.65rem]">
+            <p class="flex-none text-[0.65rem] lg:text-lg lg:pt-2">
               Y2ENERGYGROUPに<br />依頼した場合
             </p>
           </div>
