補助金あたり修正中

--- a/index.html
+++ b/index.html
@@ -731,7 +731,9 @@
           alt="下線"
           class="py-2 lg:py-5 lg:w-[80%] lg:mx-auto"
         />
-        <div class="flex pt-6 pb-3 text-center justify-center items-end">
+        <div
+          class="flex pt-6 pb-3 lg:pb-30 text-center justify-center items-end"
+        >
           <div class="w-[33%] mx-auto flex flex-col">
             <img
               src="images/graph1.svg"
@@ -771,52 +773,58 @@
         <img
           src="images/sarani.svg"
           alt="さらに"
-          class="w-[22%] absolute -top-12 left-1/2 -translate-x-1/2"
+          class="w-[22%] lg:w-[8%] absolute -top-12 lg:-top-20 left-1/2 -translate-x-1/2"
         />
         <img
           src="images/maniau.svg"
           alt="今ならまだ間に合う！！"
-          class="translate-y-0 w-[80%] mx-auto"
+          class="translate-y-0 w-[80%] lg:w-[35%] mx-auto"
         />
         <div class="w-[90%] mx-auto">
           <h2
-            class="text-[1rem] mt-4 font-mincho font-semibold tracking-[0.15rem]"
+            class="text-[1rem] lg:text-[2.4rem] mt-4 font-mincho font-semibold tracking-[0.15rem]"
           >
             <span class="block">東京都では太陽光・蓄電池の導入に</span><br />
-            <span class="flex items-center justify-center -mt-3">
+            <span class="flex items-center justify-center -mt-3 lg:-mt-9">
               <span
-                class="flex flex-col items-center justify-center text-3xl leading-tight"
+                class="flex flex-col items-center justify-center text-3xl lg:text-6xl leading-tight"
               >
                 <span>最</span>
                 <span>大</span>
               </span>
 
               <span
-                class="flex items-center text-8xl font-cinzel font-normal pt-2"
+                class="flex items-center text-8xl lg:text-[10rem] font-cinzel font-normal pt-2"
               >
                 300
               </span>
 
               <span
-                class="flex flex-col items-center justify-center text-3xl leading-tight"
+                class="flex flex-col items-center justify-center text-3xl lg:text-6xl leading-tight"
               >
                 <span>万</span>
                 <span>円</span>
               </span></span
             >
             <div class="flex justify-center mt-2 mb-3">
-              <img src="images/line.svg" alt="下線" class="w-full" />
+              <img
+                src="images/line.svg"
+                alt="下線"
+                class="w-full lg:w-[30%] lg:mx-auto"
+              />
             </div>
-            <span class="block text-[1.3rem]"
+            <span class="block text-[1.3rem] lg:text-[2.4rem] lg:pt-4"
               ><span class="text-[#d7444a]">補助金が支給</span>されます！</span
             >
           </h2>
-          <div class="my-6 bg-white pt-8 rounded-xl">
+          <div class="my-6 bg-white pt-8 rounded-xl lg:w-[50%] lg:mx-auto">
             <p>
               <span
-                class="bg-basecolor text-white text-[0.8rem] inline-block py-1 px-2 mb-2"
+                class="bg-basecolor text-white text-[0.8rem] inline-block py-1 px-2 mb-2 lg:inline-block lg:text-[1.2rem]"
               >
-                お客様に誠実・真面目なY2エナジーグループ
+                お客様に誠実・真面目なY2エナジーグループ<br
+                  class="hidden lg:block"
+                />
               </span>
               <span
                 class="inline-flex items-end text-basecolor font-mincho text-[2.7rem] font-semibold gap-1 mt-2"
