--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     class="font-sans font-medium tracking-wider leading-relaxed text-basecolor"
   >
     <header
-      class="h-[50px] lg:h-[70px] flex justify-between items-center px-2 py-2 mx-auto gap-2 fixed top-0 left-0 right-0 bg-white z-50 transition-transform duration-300"
+      class="h-[50px] md:h-[60px] lg:h-[70px] flex justify-between items-center px-2 py-2 mx-auto gap-2 fixed top-0 left-0 right-0 bg-white z-50 transition-transform duration-300"
       id="header"
     >
-      <div class="shrink-0 max-w-[46%] lg:max-w-[30%] lg:pl-10">
+      <div class="shrink-0 max-w-[46%] md:max-w-[37%] lg:max-w-[30%] lg:pl-10">
         <h1>
           <a href="#fv">
             <img
@@ -48,13 +48,13 @@
           ><img
             src="images/nav1.webp"
             alt="電話相談"
-            class="w-[100px] lg:w-[170px] h-auto object-contain"
+            class="w-[100px] md:w-[140px] lg:w-[170px] h-auto object-contain"
         /></a>
         <a href="">
           <img
             src="images/nav2.webp"
             alt="無料相談"
-            class="w-[100px] lg:w-[170px] h-auto object-contain"
+            class="w-[100px] md:w-[140px] lg:w-[170px] h-auto object-contain"
         /></a>
       </div>
     </header>
@@ -80,13 +80,15 @@
           class="text-center py-6 px-4 font-mincho text-basecolor font-semibold"
         >
           <span
-            class="block text-3xl lg:text-6xl mb-2 tracking-wider lg:tracking-[0.5rem]"
+            class="block text-3xl md:text-4xl lg:text-6xl mb-2 tracking-wider lg:tracking-[0.5rem]"
             >太陽光発電・蓄電池</span
           >
           <span class="flex items-center justify-center gap-2">
-            <span class="text-6xl lg:text-[9rem] font-bold">安さ</span>
+            <span class="text-6xl md:text-[6.5rem] lg:text-[9rem] font-bold"
+              >安さ</span
+            >
             <span
-              class="text-xl lg:text-[3rem] leading-relaxed pt-2 lg:pt-6 text-left"
+              class="text-xl md:text-[2rem] lg:text-[3rem] leading-relaxed pt-2 md:pt-4 lg:pt-6 text-left"
               >だけで選ぼうと<br />していませんか？</span
             >
           </span>
@@ -104,22 +106,22 @@
       />
 
       <div class="w-[90%] lg:w-[50%] lg:max-w-[960px] text-center mx-auto">
-        <p class="py-5 lg:text-3xl lg:my-9 lg:leading-relaxed">
+        <p class="py-5 md:text-2xl lg:text-3xl md:my-9 md:leading-relaxed">
           <span class="text-[#d7444a] font-bold">豊富な施工実績</span>と<span
             class="text-[#d7444a] font-bold"
             >安心の4大保証</span
           >で<br
-            class="lg:hidden"
+            class="md:hidden"
           />選ばれ続けている<br />Y2ENERGYGROUPにお任せください
         </p>
         <a href="#form"
           ><img
             src="images/conv-btn.webp"
-            class="w-[90%] lg:w-[70%] mx-auto"
+            class="w-[90%] md:w-[70%] mx-auto"
             alt="経験豊富なプロに無料相談・見積もりを依頼する"
         /></a>
         <div
-          class="flex gap-5 justify-center lg:justify-between py-8 lg:gap-10 lg:py-15"
+          class="flex gap-5 justify-center lg:justify-between py-8 lg:gap-10 md:py-15"
         >
           <img
             src="images/fv-3.webp"
@@ -143,18 +145,18 @@
     <section>
       <div class="bg-background">
         <div
-          class="w-[80%] lg:w-[50%] mx-auto pb-10 lg:pb-20 lg:pt-15 flex justify-center"
+          class="w-[80%] lg:w-[50%] mx-auto pb-10 md:pb-20 md:pt-15 flex justify-center"
         >
           <h2
-            class="text-[1.1rem] lg:text-[3.5rem] font-bold pt-1 text-center relative inline-block"
+            class="text-[1.1rem] md:text-[2rem] lg:text-[3.5rem] font-bold pt-1 text-center relative inline-block"
           >
             <img
               src="images/kakunin.webp"
               alt="確認必須！"
-              class="w-[95px] lg:w-[180px] absolute left-0 -top-5 lg:-top-10 z-10"
+              class="w-[95px] md:w-[120px] lg:w-[180px] absolute left-0 -top-5 md:-top-8 lg:-top-10 z-10"
             />
             施工業者選びで失敗しないための<br /><span
-              class="text-[#d7444a] text-3xl lg:text-[5rem] font-extrabold tracking-wider"
+              class="text-[#d7444a] text-3xl md:text-[3.5rem] lg:text-[5rem] font-extrabold tracking-wider"
               >簡単15秒</span
             >チェックシート
           </h2>
@@ -165,19 +167,19 @@
           <img
             src="images/tri.svg"
             alt=""
-            class="w-[80%] lg:w-[40%] lg:max-w-[600px] h-auto mx-auto"
+            class="w-[80%] md:w-[50%] lg:w-[40%] lg:max-w-[600px] h-auto mx-auto"
           />
         </div>
       </div>
       <p
-        class="w-[80%] lg:w-[50%] mx-auto text-center py-9 mt-6 lg:mt-18 lg:pb-12 lg:text-[1.4rem]"
+        class="w-[80%] lg:w-[50%] mx-auto text-center py-9 mt-6 md:text-[1rem] lg:mt-18 lg:pb-12 lg:text-[1.4rem]"
       >
         太陽光発電や蓄電池を導入する際、<br
           class="lg:hidden"
         />「安さ」だけで選んでいませんか？<br />実は、その判断が後悔やトラブルの原因になることも・・・
       </p>
-      <div class="bg-background w-[90%] md:w-[80%] lg:w-[960px] mx-auto py-6">
-        <div class="max-w-md md:max-w-[90%] mx-auto px-3 font-mincho">
+      <div class="bg-background w-[90%] lg:w-[960px] mx-auto py-6">
+        <div class="max-w-md md:max-w-[80%] mx-auto px-3 font-mincho">
           <h2
             class="text-center text-2xl lg:text-4xl font-semibold mb-8 text-basecolor lg:flex lg:items-center lg:justify-center lg:gap-2 lg:py-6"
           >
@@ -454,7 +456,7 @@
       <img
         src="images/check.webp"
         alt="じゃあどんな業者を選べばいいの？"
-        class="w-[70%] lg:w-[50%] md:w-[60%] lg:max-w-[960px] mx-auto my-7 lg:my-14"
+        class="w-[70%] lg:w-[50%] md:w-[55%] lg:max-w-[960px] mx-auto my-7 lg:my-14"
       />
       <div class="py-6 green-gradient">
         <div class="max-w-md md:max-w-full md:w-[80%] lg:w-[90%] mx-auto px-3">
