アニメ修正

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <div class="w-[90%] lg:w-[50%] lg:max-w-[960px] text-center mx-auto">
         <p
-          class="scroll-fade py-5 md:text-2xl lg:text-3xl md:my-9 md:leading-relaxed"
+          class="fv-content delay-5 py-5 md:text-2xl lg:text-3xl md:my-9 md:leading-relaxed"
         >
           <span class="text-[#d7444a] font-bold">豊富な施工実績</span>と<span
             class="text-[#d7444a] font-bold"
