btnhover追加、バグ修正

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
             class="md:hidden"
           />選ばれ続けている<br />Y2ENERGYGROUPにお任せください
         </p>
-        <a href="#form"
+        <a href="#form" class="inline-block w-[90%] md:w-[70%] mx-auto"
           ><img
             src="images/conv-btn.webp"
-            class="scroll-fade w-[90%] md:w-[70%] mx-auto"
+            class="scroll-fade btn-hover w-full"
             alt="経験豊富なプロに無料相談・見積もりを依頼する"
         /></a>
         <div
@@ -657,10 +657,10 @@
           class="lg:hidden"
         />【安心できる業者】を選びましょう!!
       </p>
-      <a href="#form"
+      <a href="#form" class="block w-[90%] md:w-[70%] mx-auto pb-9"
         ><img
           src="images/conv-btn.webp"
-          class="scroll-fade w-[90%] md:w-[70%] mx-auto pb-9"
+          class="scroll-fade btn-hover w-full"
           alt="経験豊富なプロに無料相談・見積もりを依頼する"
       /></a>
     </section>
@@ -1264,10 +1264,10 @@
             class="lg:hidden"
           />施工を心がけており<br />お客様から高い評価を受けています
         </p>
-        <a href="#form"
+        <a href="#form" class="block w-[90%] md:w-[70%] mx-auto py-9 lg:pb-20"
           ><img
             src="images/conv-btn.webp"
-            class="scroll-fade w-[90%] md:w-[70%] mx-auto py-9 lg:pb-20"
+            class="scroll-fade btn-hover w-full"
             alt="経験豊富なプロに無料相談・見積もりを依頼する"
         /></a>
       </div>
@@ -1342,7 +1342,7 @@
         ><img
           src="images/banner.webp"
           alt="Y2エナジーグループは株式会社SILFINE JAPANよりFINE-FLEX施工会社としての認定を受けています。認定証を見る"
-          class="scroll-fade h-auto object-cover lg:w-[960px] lg:mx-auto"
+          class="scroll-fade btn-hover h-auto object-cover lg:w-[960px] lg:mx-auto"
       /></a>
     </section>
     <!-- ９つの特徴セクション -->
@@ -1455,10 +1455,12 @@
         >
           お客様の住環境・ライフプランに合わせ、<br />最新型・従来型ともに多数のメーカーをご用意しております。<br />他社で設置をお断りされた方もぜひ一度ご相談下さい。
         </p>
-        <a href="#form"
+        <a
+          href="#form"
+          class="inline-block w-[90%] md:w-[70%] mx-auto my-6 md:mt-15 lg:mt-20 lg:mb-0"
           ><img
             src="images/conv-btn.webp"
-            class="scroll-fade w-[90%] md:w-[70%] mx-auto my-6 md:mt-15 lg:mt-20 lg:mb-0"
+            class="scroll-fade btn-hover w-full"
             alt="経験豊富なプロに無料相談・見積もりを依頼する"
         /></a>
       </div>
@@ -2012,7 +2014,7 @@
       <a href="#form"
         ><img
           src="images/conv-btn.webp"
-          class="scroll-fade w-[90%] md:w-[70%] lg:w-[800px] mx-auto py-9"
+          class="scroll-fade btn-hover w-[90%] md:w-[70%] lg:w-[700px] mx-auto py-9"
           alt="経験豊富なプロに無料相談・見積もりを依頼する"
       /></a>
     </section>
