--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
           class="lg:hidden"
         />【安心できる業者】を選びましょう!!
       </p>
-      <a href="#form" class="block w-[90%] md:w-[70%] mx-auto pb-9"
+      <a href="#form" class="block w-[90%] md:w-[70%] mx-auto mb-9 lg:mb-20"
         ><img
           src="images/conv-btn.webp"
           class="scroll-fade btn-hover w-full"
@@ -791,7 +791,7 @@
       </div>
     </section>
     <!-- 補助金セクション -->
-    <section class="bg-[#c5e1df] pb-9">
+    <section class="bg-[#c5e1df] pb-9 lg:pb-20">
       <div class="text-center pb-9 relative pt-0">
         <img
           src="images/sarani.svg"
@@ -910,7 +910,7 @@
       </div>
     </section>
     <!-- 施工実績セクション -->
-    <section class="bg-[#ffebb4]">
+    <section class="bg-[#ffebb4] lg:pb-20">
       <div class="w-[90%] mx-auto lg:w-[960px]">
         <h2
           class="scroll-fade text-3xl lg:text-[3rem] text-center font-mincho font-semibold tracking-[0.2rem] pt-10 mb-10 lg:pt-20 lg:mb-20"
@@ -1264,7 +1264,7 @@
             class="lg:hidden"
           />施工を心がけており<br />お客様から高い評価を受けています
         </p>
-        <a href="#form" class="block w-[90%] md:w-[70%] mx-auto py-9 lg:pb-20"
+        <a href="#form" class="block w-[90%] md:w-[70%] mx-auto my-9"
           ><img
             src="images/conv-btn.webp"
             class="scroll-fade btn-hover w-full"
@@ -1272,10 +1272,10 @@
         /></a>
       </div>
     </section>
-    <!-- 壁面設置が可能！セクション -->
+    <!-- パネルセクション -->
     <section>
       <div
-        class="scroll-fade w-[90%] lg:w-[960px] mx-auto text-center pt-6 md:pt-10 lg:pt-12"
+        class="scroll-fade w-[90%] lg:w-[960px] mx-auto text-center pt-6 md:pt-10 lg:pt-20"
       >
         <p
           class="font-mincho font-semibold text-[1.5rem] md:text-[2rem] lg:text-[2.4rem] tracking-[0.25rem] lg:tracking-[0.5rem] mb-2"
