--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
     <!-- FV セクション -->
     <section id="fv" class="bg-background">
-      <div class="lg:w-[50%] mx-auto">
+      <div class="lg:w-[960px] mx-auto">
         <img
           src="images/fv-1.webp"
           alt="月々の電気代を大幅に削減したい方"
