--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
       </div>
     </section>
     <!-- 施工実績セクション -->
-    <section class="bg-[#ffebb4] lg:pb-20">
+    <section class="bg-[#ffebb4] pb-4 lg:pb-20">
       <div class="w-[90%] mx-auto lg:w-[960px]">
         <h2
           class="scroll-fade text-3xl lg:text-[3rem] text-center font-mincho font-semibold tracking-[0.2rem] pt-10 mb-10 lg:pt-20 lg:mb-20"
